<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_constraint_padding"
    tools:context=".ui.login.MainActivity">

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_text"
        android:singleLine="true"
        android:layout_marginTop="@dimen/main_screen_top_margin"
        android:textColorHint="@color/yellow_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_text"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint_text"
        android:singleLine="true"
        android:layout_marginTop="@dimen/main_screen_top_margin"
        android:textColorHint="@color/yellow_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_screen_top_margin"
        android:text="@string/sign_in_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        android:backgroundTint="@color/yellow_800"
        android:textStyle="bold"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_screen_top_margin"
        android:textSize="@dimen/ext_login_buttons_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        android:textColor="@color/yellow_800"
        android:text="@string/forgot_password_text"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/ext_login_buttons_text_size"
        android:layout_marginTop="@dimen/main_screen_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
        android:textColor="@color/yellow_800"
        android:text="@string/sign_up_text"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/mainGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible"
        app:constraint_referenced_ids="login_edit_text, password_edit_text, sign_in_button, tv_forgot_password,
                                        tv_sign_up"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>